--- a/_posts/2023-04-20-eldorado.markdown
+++ b/_posts/2023-04-20-eldorado.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Pipeline Dados
+title: Processamento de Linguagem Natural 
 date: 2023-04-20 13:32:20 +0700
 description: Projeto Eldorado
 img: # Add image post (optional)
