--- a/_posts/2023-11-12-brisa.markdown
+++ b/_posts/2023-11-12-brisa.markdown
@@ -40,20 +40,20 @@ A plataforma **Robo Connection** foi criada com o GitHub Pages, contendo, dentre
 
 </br>
 
-<img src="../assets/img/Robotica/ROBO_Connection.jpg">
+<img src="../assets/img/Robotica/ROBO_Connection.jpg"/>
 <p align:"center">Imagens da plataforma Robo Connection</p>
 
 </br>
 
 <center> 
  
-| <center>Foto | <center>Nome | <center>Função | <center>Lição aprendida | 
-|-------|-------|--------|--------| 
-| <img src="../assets/img/Robotica/daniel.jpeg"> | <center> Daniel Sousa | <center> Community Manager | <center> Como parte da jornada da residência, as principais lições que pude aprender foram sobre trabalho em equipe, ao me desafiar e estar frente e frente com meu cliente de fato, tive que aprender a lidar com as demandas no âmbito profissional e saber coordenar meu trabalho com um time inteiro, o que com certeza me evoluiu como profissional. | 
-| <img src="../assets/img/Robotica/damarcones.jpg"> | <center> Damarcones Porto | <center> Product Manager | <center> O instituto Brisa me proporcionou uma grande oportunidade de experimentar como realmente é trabalhar com um tipo de tecnologia a qual não estou familiarizado, a programação de robôs. Mas antes de chegar nessa grande etapa, foi necessário atravessar um desafio maior ainda, que era a configuração do ambiente de programação, algo que não existia da maneira que foi construído pela equipe. Tenho grandes expectativas de que nos tornaremos referências quando o assunto for programação de NAOs. | 
-| <img src="../assets/img/Robotica/Davi.png"> |<center> Davi Antônio | <center> Gestor de Configuração de Software | <center> Participar da Residência em TIC da BRISA/UnB FGA foi um importante passo para a minha carreira profissional. Eu pude reforçar meu conhecimento em máquinas virtuais e redes de computadores que aprendi na faculdade e em projetos passados. Além disso, trabalhando com minha equipe, pudemos aprender como desenvolver aplicações em C++, uma linguagem de programação que eu desconhecia até então, e tivemos a oportunidade de vivenciar os desafios do desenvolvimento de aplicações em um robô humanoide. | 
-| <img src="../assets/img/Robotica/Gustavo.jpeg"> | <center> Gustavo Macedo | <center> Scrum Master | <center> Certamente, em termos profissionais, trabalhar no Robo Connection foi meu maior desafio até então. Aprendemos a superar nossas limitações quando enfrentávamos problemas desconhecidos. Aprendemos sobre perseverança quando insistíamos em ideias complicadas de grande valor, pois valeram a pena. Aprendemos sobre o próprio processo de aprendizado quando, inúmeras vezes, precisávamos aprender algo novo por conta própria. Acredito que o maior aprendizado veio com a organização de um trabalho em equipe altamente eficaz. | 
-| <img src="../assets/img/Robotica/matheus.jpeg"> | <center> Matheus Rodrigues | <center> Líder Técnico | <center> Ter a oportunidade de participar do projeto me proporcionou experiências que não havia tido durante minha graduação. Aprender a lidar com erros inesperados, cronogramas apertados e uma mudança abrupta de escopo de projeto foram lições aprendidas. Muito além disso, a programação em robôs humanoides e a organização do projeto foram aspectos que mais tiveram significância para mim. |
+| Foto | Nome | Função | Lição aprendida | 
+|:-------:|:-------:|:--------:|:--------| 
+| <img src="../assets/img/Robotica/daniel.jpeg"> | Daniel Sousa | Community Manager | Como parte da jornada da residência, as principais lições que pude aprender foram sobre trabalho em equipe, ao me desafiar e estar frente e frente com meu cliente de fato, tive que aprender a lidar com as demandas no âmbito profissional e saber coordenar meu trabalho com um time inteiro, o que com certeza me evoluiu como profissional. | 
+| <img src="../assets/img/Robotica/damarcones.jpg"> | Damarcones Porto | Product Manager | O instituto Brisa me proporcionou uma grande oportunidade de experimentar como realmente é trabalhar com um tipo de tecnologia a qual não estou familiarizado, a programação de robôs. Mas antes de chegar nessa grande etapa, foi necessário atravessar um desafio maior ainda, que era a configuração do ambiente de programação, algo que não existia da maneira que foi construído pela equipe. Tenho grandes expectativas de que nos tornaremos referências quando o assunto for programação de NAOs. | 
+| <img src="../assets/img/Robotica/Davi.png"> | Davi Antônio | Gestor de Configuração de Software | Participar da Residência em TIC da BRISA/UnB FGA foi um importante passo para a minha carreira profissional. Eu pude reforçar meu conhecimento em máquinas virtuais e redes de computadores que aprendi na faculdade e em projetos passados. Além disso, trabalhando com minha equipe, pudemos aprender como desenvolver aplicações em C++, uma linguagem de programação que eu desconhecia até então, e tivemos a oportunidade de vivenciar os desafios do desenvolvimento de aplicações em um robô humanoide. | 
+| <img src="../assets/img/Robotica/Gustavo.jpeg"> | Gustavo Macedo | Scrum Master | Certamente, em termos profissionais, trabalhar no Robo Connection foi meu maior desafio até então. Aprendemos a superar nossas limitações quando enfrentávamos problemas desconhecidos. Aprendemos sobre perseverança quando insistíamos em ideias complicadas de grande valor, pois valeram a pena. Aprendemos sobre o próprio processo de aprendizado quando, inúmeras vezes, precisávamos aprender algo novo por conta própria. Acredito que o maior aprendizado veio com a organização de um trabalho em equipe altamente eficaz. | 
+| <img src="../assets/img/Robotica/matheus.jpeg"> | Matheus Rodrigues | Líder Técnico | Ter a oportunidade de participar do projeto me proporcionou experiências que não havia tido durante minha graduação. Aprender a lidar com erros inesperados, cronogramas apertados e uma mudança abrupta de escopo de projeto foram lições aprendidas. Muito além disso, a programação em robôs humanoides e a organização do projeto foram aspectos que mais tiveram significância para mim. |
  
 </center>
 
